src/App.css
.App{
  position: relative;
}
.navbar {
  background-color: #1f1f1f !important;
  z-index: 100;
  height: 8vh;
}
.navlogo {
  margin-left: 70%;
}
.line{
  position: absolute;
  border-left: 1px solid rgba(255, 255, 255, 0.123);
  height: 100%;
  width: 1px;
  z-index: -2;
}
.l1{
  left: 5%;
}
.l2{
  left: 33.33%;
}
.l3{
  right: 33.33%;
}
.l4{
  right: 5%;
}
.vl {
  position: relative;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  align-items: flex-start;
  
}
#vl1 {
  margin-left: 5%;
  width: 60%;
}
#vl2 {
  width: 40%;
  align-items: center;
}
.head {
  margin-top: 150px;
  font-family: "Anton", sans-serif;
  letter-spacing: 1px;
}
.head2 {
  font-size: 20px;
  /* position:relative; */
  color: #f7f7f7 !important;
  margin-left: 10px;
}
.head3 {
  font-size: 20px;
  /* position:relative; */
  color: #f7f7f7 !important;
}
.head4 {
  font-family: "Anton", sans-serif;

  /* margin-left: 10px; */
}
.circle {
  position: absolute;
  border: 0.1px solid #f3efe6;
  border-radius: 50%;
  width: 400px;
  height: 400px;
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
  margin-top: 150px;
}
.circle::before {
  content: "";
  position: absolute;
  border-radius: 50%;
  background-color: #c02d33;
  width: 75px;
  height: 75px;
  left: 162.5px;
  top: -37.5px;
}
.inner-text {
  color: #c02d33;
  font-family: "IBM Plex Mono";
  font-size: 44px;
  margin-top: 328px;
}
.flex-container {
  display: flex;
}

.team {
  display: flex;
  margin-left: 5%;
  margin-right: 5%;
  justify-content: space-between;
  flex-wrap: wrap;
}
.footer{
  background-color: #1F1F1F;
  justify-content: center;
  flex-wrap: wrap;
  z-index: 500;
  font-family: "IBM Plex Mono";
  color: #F3EFE6;
  height: 14vh;
}

.socialf{
  display: flex;
 justify-content: center;
 align-items: center;
 padding-top: 15px;
 padding-bottom: 15px;
}
.textf{
  /* Made with ❤ by IxDA-Vellore️ */

position: static;
left: 0px;
top: 0px;
font-family: IBM Plex Mono;
font-style: normal;
font-weight: normal;
font-size: 16px;
line-height: 21px;

letter-spacing: 0.04em;

color: #F3EFE6;

flex: none;
order: 0;
flex-grow: 0;
margin: 0px;

}

.arrowd {
  display: flex;
  margin-bottom: 200px;
  width: 20px;
  margin-left: 40%;
}
.a {
  color: #286099 !important;
}
.b {
  color: #c02d33 !important;
}
.c {
  color: #f26539 !important;
}
.d {
  color: #a6ce39 !important;
}
.e {
  color: #55c4c4 !important;
}

#a {
  color: #286099 !important;
}
#b {
  color: #c02d33 !important;
}
#c {
  color: #f26539 !important;
}
#d {
  color: #a6ce39 !important;
}
#e {
  color: #55c4c4 !important;
}

#ca::before {
  background-color: #286099 !important;
}
#cb::before {
  background-color: #c02d33 !important;
}
#cc::before {
  background-color: #f26539 !important;
}
#cd::before {
  background-color: #a6ce39 !important;
}
#ce::before {
  background-color: #55c4c4 !important;
}

.who-are-we-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin: 5%;
}

.who-are-we-container > .head3 {
  width: 50%;
}


@media only screen and (max-width: 1000px) {
  .flex-container {
    display: flex;
    width: 100%;
    justify-content: center;
  }

  #vl2 {
    display: none;
  }

  .who-are-we-container {
    display: flex;
    width: 100%;
  }

  .who-are-we-container > .head3 {
    width: 90%;
  }

  .team{
    justify-content: center;
  }
}

